--- a/tests/personas/rules/rule1.yml
+++ b/tests/personas/rules/rule1.yml
@@ -1,14 +1,13 @@
 trigger:
-  label: "Do some shit"                                              # (optional)
-  target: "http://cpee.org/~demo/orgviz/organisation_informatik.xml" # (optional)
-  event: "task/add"                                                  # task/add, user/take, user/giveback
+  label:                                                              # (optional)
+  target: "http://cpee.org/~demo/orgviz/organisation_informatik.xml"  # (optional)
+  event: "user/take"                                                  # task/add, user/take, user/giveback
     # task/add      -> we can trigger user/take
     # user/take     -> we can trigger user/giveback
     # user/take     -> we can trigger user/finish
     # user/giveback -> we can trigger user/take
 action:
-  event: "user/take"
+  event: "user/giveback"
   user: "certain user" # optional, is only necessary for user/take
   data: "http://" # optional, is only necessary for user/finish
 active: true
-
